# bcalc

./: Cargo.toml  README.md
src/: commands.rs  error.rs  input_history.rs  main.rs  operations.rs  position.rs  saved_data.rs  syntax_tree.rs  token.rs  variable.rs
